make hiera.yaml better

--- a/templates/hiera.yaml.erb
+++ b/templates/hiera.yaml.erb
@@ -9,6 +9,6 @@
 <% end -%>
 
 <% @hiera_backends.each do |backend| -%>
-:<%= backend %>:
-  :datadir: "<%= @hiera_base %>"
+:<%= backend %>: 
+  :datadir: "<%= @hiera_base %>/%{environment}"
 <% end -%>
